--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -314,6 +314,12 @@ footer {
   text-align: center;
   margin: 2rem 0 0;
 }
+.footer {
+  background-color: var(--bg-color);
+  padding: 1.25rem;
+  text-align: center;
+  margin: 2rem 0 0;
+}
 /* Footer section ends */
 
 /* General (utilities) */
