--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -112,12 +112,12 @@ nav ul li {
 }
 
 .hero img {
-  height: 37.5rem;
-  width: 37.5rem;
+  height: 23.5rem;
+  width: 23.5;
 }
 
 .bio {
-  width: 25rem;
+  width: 23rem;
   padding: 0.625rem;
   border-radius: 6px;
   box-shadow: 0px 2px 15px 2px var(--primary-shadow);
@@ -369,19 +369,19 @@ footer {
   }
 
   .hero {
-    margin-top: -4rem;
+    margin-top: 4rem;
     flex-direction: column;
     gap: 0;
   }
 
   .bio {
-    margin-top: -7rem;
+    margin-top: 10rem;
     width: 20.5rem;
   }
 
   .hero img {
-    height: 37.5rem;
-    width: 30rem;
+    height: 20.5rem;
+    width: 20.5rem;
   }
 
   .more-about {
