--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -418,6 +418,10 @@ footer {
   .bio {
     width: 18.3rem;
   }
+  
+  .projects-container {
+    flex-direction: column;
+  }
 
   .project-container {
     width: 17.875rem;
